--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "bootstrap": "^4.1.3",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "react-bootstrap": "^0.32.3"
   }
 }
