--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=1664 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -22,5 +22,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "react-bootstrap": "^0.32.3"
-  }
+  },
+  "homepage": "./admin"
 }
