--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "i18next": "^12.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-i18next": "^8.3.5",
     "react-scripts": "1.1.5"
   },
   "scripts": {
