--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-i18next": "^8.3.5",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "babel-eslint": "^9.0.0"
   },
   "scripts": {
     "start": "PORT=1664 react-scripts start",
