--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-eslint": "^9.0.0",
     "i18next": "^12.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-i18next": "^8.3.5",
-    "react-scripts": "1.1.5",
-    "babel-eslint": "^9.0.0"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "PORT=1664 react-scripts start",
@@ -17,13 +17,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.4.1",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "react-bootstrap": "^0.32.3"
+    "react-bootstrap": "^1.0.0"
   },
   "homepage": "/admin"
 }
