--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-eslint": "^9.0.0",
-    "i18next": "^12.0.0",
+    "babel-eslint": "^10.1.0",
+    "i18next": "^19.4.2",
+    "i18next-browser-languagedetector": "^4.0.2",
+    "i18next-http-backend": "^1.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-i18next": "^8.3.5",
-    "react-scripts": "1.1.5"
+    "react-i18next": "^11.3.4",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "PORT=1664 react-scripts start",
@@ -18,12 +20,23 @@
   },
   "devDependencies": {
     "bootstrap": "^4.4.1",
-    "eslint": "^5.5.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "react-bootstrap": "^1.0.0"
   },
-  "homepage": "/admin"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
