--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-table": "^7.0.4"
   },
   "scripts": {
     "start": "PORT=1664 react-scripts start",
@@ -41,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/admin"
+  "homepage": "/admin",
+  "scarfSettings": {
+    "enabled": false
+  }
 }
