--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "formik": "^2.1.4",
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.0.2",
     "i18next-http-backend": "^1.0.3",
@@ -14,7 +15,8 @@
     "react-i18next": "^11.3.4",
     "react-scripts": "^3.4.1",
     "react-table": "^7.0.4",
-    "restful-react": "^11.2.0"
+    "restful-react": "^11.2.0",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "PORT=1664 react-scripts start",
