--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.0.2",
     "i18next-http-backend": "^1.0.3",
+    "match-sorter": "^4.1.0",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-table": "^7.0.4",
+    "restful-react": "^11.2.0"
   },
   "scripts": {
     "start": "PORT=1664 react-scripts start",
@@ -41,5 +45,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/admin"
+  "homepage": "/admin",
+  "scarfSettings": {
+    "enabled": false
+  }
 }
