--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,26 @@
 {
     "short_name": "Watcha Admin",
-    "name": "Watcha Administration Application",
+    "name": "Watcha Administration Interface",
     "icons": [
-        {
-            "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/x-icon"
-        }
+      {
+        "src": "favicon.ico",
+        "sizes": "64x64 32x32 24x24 16x16",
+        "type": "image/x-icon"
+      },
+      {
+        "src": "logo192.png",
+        "type": "image/png",
+        "sizes": "192x192"
+      },
+      {
+        "src": "logo512.png",
+        "type": "image/png",
+        "sizes": "512x512"
+      }
     ],
-    "start_url": "./index.html",
+    "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
     "background_color": "#ffffff"
-}
+  }
+  
