change the URL for the admin from /admin to /watcha-admin

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/admin",
+  "homepage": "/watcha-admin",
   "scarfSettings": {
     "enabled": false
   }
