watcha op379 - change the URL for the admin from /admin to /watcha-admin (#22)
* change the URL for the admin from /admin to /watcha-admin
* better new URL

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/admin",
+  "homepage": "/admin-v2",
   "scarfSettings": {
     "enabled": false
   }
