--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next-http-backend": "^1.0.3",
     "match-sorter": "^4.1.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
