--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.12",
     "react-scripts": "^4.0.3",
@@ -37,8 +38,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "react-bootstrap": "^1.0.0"
+    "eslint-plugin-react-hooks": "^3.0.0"
   },
   "browserslist": {
     "production": [
