--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -2,3 +2,24 @@ extends:
     - airbnb
     - airbnb/hooks
     - prettier
+rules:
+    no-shadow:
+        - warn
+    no-param-reassign:
+        - warn
+    jsx-a11y/click-events-have-key-events:
+        - warn
+    jsx-a11y/no-static-element-interactions:
+        - warn
+    react-hooks/exhaustive-deps:
+        - warn
+    react/jsx-props-no-spreading:
+        - warn
+        - html: ignore
+          explicitSpread: ignore
+    react/jsx-filename-extension:
+        - error
+        - extensions:
+              - .js
+              - .jsx
+              - .tsx
